<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/right_logo"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/aniwhere_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@id/right_logo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/le"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecaregular"
            />
        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/le1"
            android:textSize="18dp"
            android:fontFamily="@font/crimsonproregular"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cyc"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecasemibold"/>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="16dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="360dp"
                    android:text="@string/cyc1"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>

        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ryp"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecasemibold"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="16dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="330dp"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/ryp1"
                    android:textSize="18dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="16dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/ryp2"
                    android:textSize="18dp" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/vye"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecasemibold"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="16dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/vye1"
                    android:textSize="18dp" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cyic"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecasemibold"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/cyic1"
                    android:textSize="18dp" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ua"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecasemibold"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/ua1"
                    android:textSize="18dp" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ccd"
            android:textSize="20dp"
            android:fontFamily="@font/lexenddecasemibold"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="360dp"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/ccd1"
                    android:textSize="18dp" />
            </TableRow>

        </TableLayout>


    </LinearLayout>
    </ScrollView>
</RelativeLayout>