<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgray">

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp" />


    <ImageView
        android:id="@+id/right_logo"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/aniwhere_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/feedback"
        android:textSize="34sp"
        android:fontFamily="@font/crimsonprobold"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/feedback"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/feedbacktext"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktext"
            android:textSize="16sp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/whiterectanglelayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:fontFamily="@font/crimsonsemibold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:fontFamily="@font/crimsonprolight"
                android:textSize="16sp"/>
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4.5"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:progressTint="@color/matcha"
                android:progressBackgroundTint="@color/lightgray"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/whiterectanglelayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimsonsemibold"
            android:textSize="16sp"
            android:text="@string/text2"
            />
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/b1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray"/>
            <Button
                android:id="@+id/b2"
                android:layout_below="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/b2"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray"/>
            <Button
                android:id="@+id/b3"
                android:layout_below="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/b3"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray"/>

            <Button
               android:id="@+id/b4"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/b4"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray"
                />
            <Button
                android:id="@+id/b5"
                android:layout_alignParentRight="true"
                android:layout_below="@id/b4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/b5"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray"/>
            <Button
                android:id="@+id/b6"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/b5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/b6"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray"
                android:textSize="16sp"/>




        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="318dp"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:hint="@string/commentbox"
            app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
        android:padding="8dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:maxLines="5"
        android:minLines="3"
        android:fontFamily="@font/cormorantregular"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:hint="@string/commentbox" />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
        <Button
            android:id="@+id/submit"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/matcha"/>
    </LinearLayout>
</RelativeLayout>