<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/lightgray">

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp" />


    <ImageView
        android:id="@+id/right_logo"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/aniwhere_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/right_logo"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/HCB1"
            android:textSize="24dp"
            android:fontFamily="@font/crimsonprobold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/hdiralpp1"
            android:textSize="18dp"
            android:fontFamily="@font/crimsonproregular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/tt"
            android:textSize="24dp"
            android:fontFamily="@font/crimsonprobold"/>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="wrap_content"
                    android:text="@string/tt1"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="wrap_content"
                    android:text="@string/tt2"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="wrap_content"
                    android:text="@string/tt3"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="wrap_content"
                    android:text="@string/tt4"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/itrfp"
            android:textSize="24dp"
            android:fontFamily="@font/crimsonprobold"/>
        <TableLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp">
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="3"
                    android:fontFamily="@font/crimsonproregular"
                    android:text="@string/itrfp1"
                    android:textSize="18dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="wrap_content"
                    android:text="@string/itrfp2"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="●"
                    android:textSize="14dp"/>
                <View
                    android:layout_column="2"
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <TextView
                    android:layout_column="3"
                    android:layout_width="wrap_content"
                    android:text="@string/itrfp3"
                    android:textSize="18dp"
                    android:fontFamily="@font/crimsonproregular"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>
</RelativeLayout>